# music_streaming

./: database.py  factory.py  grpc_client.py  grpc_server.py  main.py  music.proto  music_pb2.py  music_pb2_grpc.py  music_service.db  pyproject.toml  seed.py
controller/: streaming_controller.py  streaming_controller_graphql.py  streaming_controller_rest.py  streaming_controller_soap.py
models/: streaming_model.py
schemas/: streaming_schemas.py
